--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URL=mongodb+srv://vinay:<password>@database.wb6rl71.mongodb.net/?retryWrites=true&w=majority;
+MONGO_URL=mongodb+srv://vinay:Dei9TPEAfm83HAdl@database.wb6rl71.mongodb.net/?retryWrites=true&w=majority
